--- a/docs/PS3/BLES00316.md
+++ b/docs/PS3/BLES00316.md
@@ -7,12 +7,12 @@
 Target File: `BLES00316-*\MAINSAVE.BSG`
 
 ```
-Decompress(*, 15)
+Decompress(0x00000044, 15)
 ```
 
 ### 2. Max Money
 
-Target File: `BLES00316-*\MAINSAVE.BSG`
+Target File: `~extracted\00000044.dat`
 
 ```
 80010008 02000000
@@ -20,11 +20,21 @@ Target File: `BLES00316-*\MAINSAVE.BSG`
 18000008 0000270F
 ```
 
-### 3. Compress Save (Required)
+### 3. Max ADAM
+
+Target File: `~extracted\00000044.dat`
+
+```
+80010008 02000000
+00220000 00000000
+18000012 0000270F
+```
+
+### 4. Compress Save (Required)
 
 Target File: `MAINSAVE.BSG`
 
 ```
-Compress(*)
+Compress(0x00000044)
 ```
 
