--- a/docs/PS3/BLES00942.md
+++ b/docs/PS3/BLES00942.md
@@ -2,7 +2,16 @@
 
 `BLES00942.savepatch`
 
-### 1. Max Pills
+### 1. Decrypt RAGE.SAV (Required)
+
+Target File: `BLES00942MP3_PROGRESSION\RAGE.SAV`
+
+```
+import maxpayne3
+maxpayne3.maxpayne3_crypt(maxpayne3.MODE_DECRYPT, savedata)
+```
+
+### 2. Max Pills
 
 Target File: `BLES00942MP3_PROGRESSION\RAGE.SAV`
 
@@ -12,7 +21,7 @@ Target File: `BLES00942MP3_PROGRESSION\RAGE.SAV`
 28000034 00000009
 ```
 
-### 2. Max Ammo
+### 3. Max Ammo
 
 Target File: `BLES00942MP3_PROGRESSION\RAGE.SAV`
 
@@ -21,5 +30,14 @@ Target File: `BLES00942MP3_PROGRESSION\RAGE.SAV`
 5F617272 6179FDFF
 4A000060 7FFFFFFF
 40030004 00000000
+```
+
+### 4. Encrypt RAGE.SAV (Required)
+
+Target File: `BLES00942MP3_PROGRESSION\RAGE.SAV`
+
+```
+import maxpayne3
+maxpayne3.maxpayne3_crypt(maxpayne3.MODE_ENCRYPT, savedata)
 ```
 
