--- a/docs/PS3/BLES01587.md
+++ b/docs/PS3/BLES01587.md
@@ -2,76 +2,111 @@
 
 `BLES01587.savepatch`
 
-### 1.  go to http://bruteforcesavedata.forumms.net/t18-batman-arkham-city-gotyguide-added-to-mod-xp for more info
-### 2.  Some patches may not be supported by BSD yet
-### 3. Decompress Save (Required)
+### 1. Decompress PAYLOAD (Required)
 
 Target File: `BLUS30978-SAVE*\PAYLOAD`
 
 ```
-Decompress(*, 15)
+import uzlib
+zip_offset = uzlib.offzip(savedata, 15)
+unzip_data = uzlib.decompress(savedata[zip_offset[1][0]:], 15)
+print("Zip offset: 0x{:08X}".format(zip_offset[1][0]))
+print("Compressed size:", zip_offset[1][1])
+print("Decompressed size:", zip_offset[1][2])
 ```
 
-### 4. Level Up (Not Working)
+### 2. Max Mod XP
 
 Target File: `BLUS30978-SAVE*\PAYLOAD`
 
 ```
-90000000 0000001C
-93000000 00000028
+import apollo
+sw_code = """
+94000000 00000028
+28000000 48927C00
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
+```
+
+### 3. Level Up
+
+Target File: `BLUS30978-SAVE*\PAYLOAD`
+
+```
+import apollo
+sw_code = """
+94000000 00000028
 58000008 00000004
 58000000 00000000
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 5. Unlock All Character Bios (Not Working)
+### 4. Unlock All Character Bios
 
 Target File: `BLUS30978-SAVE*\PAYLOAD`
 
 ```
-90000000 0000001C
-93000000 0000116F
+import apollo
+sw_code = """
+94000000 0000116F
 48000000 00000001
 40200001 00000000
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 6. Unlock All Arkham City Stories (Not Working)
+### 5. Unlock All Arkham City Stories
 
 Target File: `BLUS30978-SAVE*\PAYLOAD`
 
 ```
-90000000 0000001C
-93000000 00000F89
+import apollo
+sw_code = """
+94000000 00000F89
 4A000000 00000001
 403E0004 00000000
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 7. Unlock All Character Trophies (Not Working)
+### 6. Unlock All Character Trophies
 
 Target File: `BLUS30978-SAVE*\PAYLOAD`
 
 ```
-90000000 0000001C
-93000000 000010EB
+import apollo
+sw_code = """
+94000000 000010EB
 48000000 00000001
 40590001 00000000
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 8. Unlock All Concept Art (Not Working)
+### 7. Unlock All Concept Art
 
 Target File: `BLUS30978-SAVE*\PAYLOAD`
 
 ```
-90000000 0000001C
-93000000 00001037
+import apollo
+sw_code = """
+94000000 00001037
 48000000 00000001
 40500001 00000000
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 9. Compress Save (Required)
+### 8. Compress PAYLOAD (Required)
 
-Target File: `PAYLOAD`
+Target File: `BLUS30978-SAVE*\PAYLOAD`
 
 ```
-Compress(*)
+import uzlib
+print("Compressing bytes:", len(unzip_data))
+print("Compress offset: 0x{:08X}".format(zip_offset[1][0]))
+savedata = uzlib.packzip(savedata, zip_offset[1], unzip_data)
+print("New compressed size:", zip_offset[1][1])
 ```
 
