--- a/docs/PS3/BLES01684.md
+++ b/docs/PS3/BLES01684.md
@@ -3,9 +3,17 @@
 `BLES01684.savepatch`
 
 ### 1.  Some patches may not be supported by BSD yet
-### 2. Level 50 (Not Working)
+### 2. Decompress SAVE (Required)
 
 Target File: `BLES01684-SAVE-*\SAVE*`
+
+```
+Decompress(0x00000018, 15)
+```
+
+### 3. Level 50 (Not Working)
+
+Target File: `~extracted\00000018.dat`
 
 ```
 60000000 00000001
@@ -13,9 +21,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 60400000 00000032
 ```
 
-### 3. Max Skill Points
+### 4. Max Skill Points
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 80010003 28003200
@@ -23,9 +31,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 08000000 00000063
 ```
 
-### 4. Reset Skill Points to 0
+### 5. Reset Skill Points to 0
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 80010003 28003200
@@ -33,37 +41,37 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 08000000 00000000
 ```
 
-### 5. Max Money
+### 6. Max Money
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 80010003 28003200
 28000004 FFC1D72F
 ```
 
-### 6. Max Eridium
+### 7. Max Eridium
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 80010003 28003200
 08000008 00000063
 ```
 
-### 7. Max Seraph Crystals
+### 8. Max Seraph Crystals
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 80010003 28003200
 08000009 0000007F
 ```
 
-### 8. Max Ammo
-### 9. Combat Rifles
+### 9. Max Ammo
+### 10. Combat Rifles
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 8001000C 745F5269
@@ -71,9 +79,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 2800000D 003C1C46
 ```
 
-### 10. Grenades
+### 11. Grenades
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 8001000C 50726F74
@@ -81,9 +89,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 2800000D 003C1C46
 ```
 
-### 11. Pistols
+### 12. Pistols
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 8001000C 5F506973
@@ -91,9 +99,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 2800000D 003C1C46
 ```
 
-### 12. Rocket Launchers
+### 13. Rocket Launchers
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 8001000C 61756E63
@@ -101,9 +109,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 2800000D 003C1C46
 ```
 
-### 13. SMG's
+### 14. SMG's
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 8001000C 726F6C5F
@@ -111,9 +119,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 2800000D 003C1C46
 ```
 
-### 14. Shotguns
+### 15. Shotguns
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 8001000C 53686F74
@@ -121,9 +129,9 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 2800000D 003C1C46
 ```
 
-### 15. Sniper Rifles
+### 16. Sniper Rifles
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `~extracted\00000018.dat`
 
 ```
 8001000C 725F5269
@@ -131,10 +139,18 @@ Target File: `BLES01684-SAVE-*\SAVE*`
 2800000D 003C1C46
 ```
 
-### 16. 
-### 17. Update SHA1 (Required)
+### 17. 
+### 18. Compress SAVE (Required)
 
-Target File: `BLES01684-SAVE-*\SAVE*`
+Target File: `SAVE*`
+
+```
+Compress(0x00000018)
+```
+
+### 19. Update SHA1 (Required)
+
+Target File: `SAVE*`
 
 ```
 set pointer:eof+1
