--- a/docs/PS3/BLUS30166.md
+++ b/docs/PS3/BLUS30166.md
@@ -7,12 +7,12 @@
 Target File: `BLUS30166-*\MAINSAVE.BSG`
 
 ```
-Decompress(*, 15)
+Decompress(0x00000044, 15)
 ```
 
 ### 2. Max Money
 
-Target File: `BLUS30166-*\MAINSAVE.BSG`
+Target File: `~extracted\00000044.dat`
 
 ```
 80010008 02000000
@@ -22,7 +22,7 @@ Target File: `BLUS30166-*\MAINSAVE.BSG`
 
 ### 3. Max ADAM
 
-Target File: `BLUS30166-*\MAINSAVE.BSG`
+Target File: `~extracted\00000044.dat`
 
 ```
 80010008 02000000
@@ -35,6 +35,6 @@ Target File: `BLUS30166-*\MAINSAVE.BSG`
 Target File: `MAINSAVE.BSG`
 
 ```
-Compress(*)
+Compress(0x00000044)
 ```
 
