--- a/docs/PS3/BLUS30279.md
+++ b/docs/PS3/BLUS30279.md
@@ -2,12 +2,18 @@
 
 `BLUS30279.savepatch`
 
-### 1. Decompress Save (Required)
+### 1. Decompress PAYLOAD (Required)
 
 Target File: `BLUS30279-SAVE*\PAYLOAD`
 
 ```
-Decompress(*, 15)
+import uzlib
+zip_offset = uzlib.offzip(savedata, 15)
+zip_id = (len(zip_offset) - 1)
+unzip_data = uzlib.decompress(savedata[zip_offset[zip_id][0]:], 15)
+print("Zip offset: 0x{:08X}".format(zip_offset[zip_id][0]))
+print("Compressed size:", zip_offset[zip_id][1])
+print("Decompressed size:", zip_offset[zip_id][2])
 ```
 
 ### 2. Level Up (Not Working)
@@ -47,31 +53,44 @@ Target File: `BLUS30279-SAVE*\PAYLOAD`
 58000000 00000000
 ```
 
-### 3. Unlock All Character Bios (Not Working)
+### 3. Unlock All Character Bios
 
 Target File: `BLUS30279-SAVE*\PAYLOAD`
 
 ```
+import apollo
+sw_code = """
 94000000 00000108
 4A000000 00000001
 402A0004 00000000
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 4. Unlock All Character Trophies (Not Working)
+### 4. Unlock All Character Trophies
 
 Target File: `BLUS30279-SAVE*\PAYLOAD`
 
 ```
+import apollo
+sw_code = """
 94000000 0000005C
 4A000000 00000001
 40140004 00000000
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 5. Compress Save (Required)
+### 5. Compress PAYLOAD (Required)
 
 Target File: `PAYLOAD`
 
 ```
-Compress(*)
+import uzlib
+print("Compressing bytes:", len(unzip_data))
+print("Compress offset: 0x{:08X}".format(zip_offset[zip_id][0]))
+print("Old compressed size:", zip_offset[zip_id][1])
+savedata = uzlib.packzip(savedata, zip_offset[zip_id], unzip_data)
+print("New compressed size:", zip_offset[zip_id][1])
 ```
 
