--- a/docs/PS3/BLUS30420.md
+++ b/docs/PS3/BLUS30420.md
@@ -2,12 +2,18 @@
 
 `BLUS30420.savepatch`
 
-### 1. Decompress Save (Required)
+### 1. Decompress MAINSAVE.BSG (Required)
 
 Target File: `BLUS30420-*\MAINSAVE.BSG`
 
 ```
-Decompress(*, 15)
+import uzlib
+zip_offset = uzlib.offzip(savedata, 15)
+zip_id = 0
+unzip_data = uzlib.decompress(savedata[zip_offset[zip_id][0]:], 15)
+print("Zip offset: 0x{:08X}".format(zip_offset[zip_id][0]))
+print("Compressed size:", zip_offset[zip_id][1])
+print("Decompressed size:", zip_offset[zip_id][2])
 ```
 
 ### 2. Max Money
@@ -15,12 +21,16 @@ Decompress(*, 15)
 Target File: `BLUS30420-*\MAINSAVE.BSG`
 
 ```
+import apollo
+sw_code = """
 80010008 03000000
 00220000 00000000
 18000008 000003E7
 80010008 02000000
 00220000 00000000
 18000008 000003E7
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
 ### 3. Max ADAM
@@ -28,19 +38,28 @@ Target File: `BLUS30420-*\MAINSAVE.BSG`
 Target File: `BLUS30420-*\MAINSAVE.BSG`
 
 ```
+import apollo
+sw_code = """
 80010008 03000000
 00220000 00000000
 18000012 0000270F
 80010008 02000000
 00220000 00000000
 18000012 0000270F
+"""
+apollo.apply_savewizard(unzip_data, sw_code)
 ```
 
-### 4. Compress Save (Required)
+### 4. Compress MAINSAVE.BSG (Required)
 
-Target File: `BLUS30420-*\MAINSAVE.BSG`
+Target File: `MAINSAVE.BSG`
 
 ```
-Compress(*)
+import uzlib
+print("Compressing bytes:", len(unzip_data))
+print("Compress offset: 0x{:08X}".format(zip_offset[zip_id][0]))
+print("Old compressed size:", zip_offset[zip_id][1])
+savedata = uzlib.packzip(savedata, zip_offset[zip_id], unzip_data)
+print("New compressed size:", zip_offset[zip_id][1])
 ```
 
