--- a/docs/PS3/BLUS31207.md
+++ b/docs/PS3/BLUS31207.md
@@ -2,38 +2,63 @@
 
 `BLUS31207.savepatch`
 
-### 1. Decompress SAVE (Required)
+### 1. Decompress SPBATMAN (Required)
 
 Target File: `SPBATMAN`
 
 ```
-Decompress(*, 15)
+import uzlib
+zip_offset = uzlib.offzip(savedata, 15)
+unzip_data = uzlib.decompress(savedata[zip_offset[1][0]:], 15)
+print("Zip offset: 0x{:08X}".format(zip_offset[1][0]))
+print("Compressed size:", zip_offset[1][1])
+print("Decompressed size:", zip_offset[1][2])
 ```
 
 ### 2. 9000000 XP
 
-Target File: `~extracted\*.dat`
+Target File: `SPBATMAN`
 
 ```
-search "VoiceOfThePeople"
-write next (73):0x00895440
+#search "VoiceOfThePeople"
+#write next (73):0x00895440
+import apollo
+swcode = """
+80010010 566F6963
+654F6654 68655065
+6F706C65 00000000
+28000049 00895440
+"""
+apollo.apply_savewizard(unzip_data, swcode)
 ```
 
 ### 3. 99 Upgrade points
 
-Target File: `~extracted\*.dat`
+Target File: `SPBATMAN`
 
 ```
-search "VoiceOfThePeople"
-write next (32):0x63
+#search "VoiceOfThePeople"
+#write next (32):0x63
+import apollo
+swcode = """
+80010010 566F6963
+654F6654 68655065
+6F706C65 00000000
+08000020 00000063
+"""
+apollo.apply_savewizard(unzip_data, swcode)
 ```
 
-### 4. Compress SAVE (Required)
+### 4. Compress SPBATMAN (Required)
 
 Target File: `SPBATMAN`
 
 ```
-Compress(*)
+import uzlib
+print("Compressing bytes:", len(unzip_data))
+print("Compress offset: 0x{:08X}".format(zip_offset[1][0]))
+savedata = uzlib.packzip(savedata, zip_offset[1], unzip_data)
+print("New compressed size:", zip_offset[1][1])
 ```
 
 ### 5. Update CRC32Big for SPBATMAN (Required)
