--- a/docs/PS3/NPEB00476.md
+++ b/docs/PS3/NPEB00476.md
@@ -7,12 +7,13 @@
 Target File: `SAVEGAME.SAV`
 
 ```
-Decompress(*, 15)
+Decompress(0x00000043, 15)
 ```
 
-### 2. Retry x 9999
+### 2. Must have 1 or more for cheats to work
+### 3. Retry x 9999
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x42A000000000:1
@@ -59,9 +60,9 @@ search 0x42A000000000:21
 write next (6):0x270F
 ```
 
-### 3. Pistol ammo x 9999
+### 4. Pistol ammo x 9999
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x3BAC034C0026E029E20000000002:1
@@ -108,9 +109,9 @@ search 0x3BAC034C0026E029E20000000002:21
 write next (14):0x270F
 ```
 
-### 4. Shotgun ammo x 9999
+### 5. Shotgun ammo x 9999
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x71C516A1006172323F0000000001:1
@@ -157,9 +158,9 @@ search 0x71C516A1006172323F0000000001:21
 write next (14):0x270F
 ```
 
-### 5. 99 X Medkit
+### 6. 99 X Medkit
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x15DDB2200000000023000000:1
@@ -206,9 +207,9 @@ search 0x15DDB2200000000023000000:21
 write next (12):0x63
 ```
 
-### 6. 99 X Fruit cocktail
+### 7. 99 X Fruit cocktail
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0xF8BEA520000000002C000000:1
@@ -255,9 +256,9 @@ search 0xF8BEA520000000002C000000:21
 write next (12):0x63
 ```
 
-### 7. 99 X Water bottle
+### 8. 99 X Water bottle
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x0F2FAF7F0000000027000000:1
@@ -304,9 +305,9 @@ search 0x0F2FAF7F0000000027000000:21
 write next (12):0x63
 ```
 
-### 8. 99 X Painkillers
+### 9. 99 X Painkillers
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x5516363B000000001C000000:1
@@ -353,9 +354,9 @@ search 0x5516363B000000001C000000:21
 write next (12):0x63
 ```
 
-### 9. 99 X Food can
+### 10. 99 X Food can
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0xD88A64AF000000001B000000:1
@@ -402,9 +403,9 @@ search 0xD88A64AF000000001B000000:21
 write next (12):0x63
 ```
 
-### 10. 99 X Soda can
+### 11. 99 X Soda can
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x72C5CEC0000000002E000000:1
@@ -451,9 +452,9 @@ search 0x72C5CEC0000000002E000000:21
 write next (12):0x63
 ```
 
-### 11. 99 X Oral rehydration salts
+### 12. 99 X Oral rehydration salts
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0x481CF0FD000000002D000000:1
@@ -500,9 +501,9 @@ search 0x481CF0FD000000002D000000:21
 write next (12):0x63
 ```
 
-### 12. 99 X Adrenaline syringe
+### 13. 99 X Adrenaline syringe
 
-Target File: `~extracted\*.dat`
+Target File: `~extracted\00000043.dat`
 
 ```
 search 0xE69CE35B0000000025000000:1
@@ -549,15 +550,15 @@ search 0xE69CE35B0000000025000000:21
 write next (12):0x63
 ```
 
-### 13. Compress Save (Required)
+### 14. Compress Save (Required)
 
 Target File: `SAVEGAME.SAV`
 
 ```
-Compress(*)
+Compress(0x00000043)
 ```
 
-### 14. Update CRC32Big for SAVEGAME.SAV (Required)
+### 15. Update CRC32Big for SAVEGAME.SAV (Required)
 
 Target File: `SAVEGAME.SAV`
 
@@ -568,7 +569,7 @@ set [hash]:CRC32Big
 write at 0x000000:[hash]
 ```
 
-### 15. Update CRC32Big for PROFILE.SAV (Required)
+### 16. Update CRC32Big for PROFILE.SAV (Required)
 
 Target File: `PROFILE.SAV`
 
