--- a/docs/PS4/CUSA09193.md
+++ b/docs/PS4/CUSA09193.md
@@ -1,11 +1,27 @@
-# PS4 Resident evil 2 remake
+#  Resident Evil 2 Remake
 
 `CUSA09193.savepatch`
 
-### 1. Untested - Make sure to backup your save data first
-### 2. GOD MODE (INFINITE HEALTH)
+### 1. Decrypt Save data (Required)
 
-Target File: `*`
+Target File: `data*.bin`
+
+```
+set range:0x0010,EOF-0x04
+endian_swap(4)
+decrypt blowfish_cbc("K<>$cl%isqA|~nV4W5~3z_Q)j]5DHdB9sb{cI9Hn&Gqc-zO8O6zf", 0x0000000000000000)
+endian_swap(4)
+set range:0x0010,0x001F
+endian_swap(4)
+encrypt blowfish_cbc("K<>$cl%isqA|~nV4W5~3z_Q)j]5DHdB9sb{cI9Hn&Gqc-zO8O6zf", 0x0000000000000000)
+decrypt blowfish_ecb("K<>$cl%isqA|~nV4W5~3z_Q)j]5DHdB9sb{cI9Hn&Gqc-zO8O6zf")
+endian_swap(4)
+```
+
+### 2. Untested - Make sure to backup your save data first
+### 3. GOD MODE (INFINITE HEALTH)
+
+Target File: `data*.bin`
 
 ```
 80010008 D3A8A66D
@@ -13,9 +29,9 @@ Target File: `*`
 28000010 7FFFFFFF
 ```
 
-### 3. UNLOCK ALL ITEM SLOTS (1-20)
+### 4. UNLOCK ALL ITEM SLOTS (1-20)
 
-Target File: `*`
+Target File: `data*.bin`
 
 ```
 80010004 6D8DAA27
@@ -24,9 +40,9 @@ Target File: `*`
 2800000C 00000014
 ```
 
-### 4. Leon - AutoSave - ATM-4
+### 5. Leon - AutoSave - ATM-4
 
-Target File: `*`
+Target File: `data*.bin`
 
 ```
 80020024 2D727526
@@ -40,9 +56,9 @@ F5C58BAA 01000000
 08000050 00000004
 ```
 
-### 5. Change Difficulty to ASSISTED
+### 6. Change Difficulty to ASSISTED
 
-Target File: `*`
+Target File: `data*.bin`
 
 ```
 8001000C 8C26C0AA
@@ -50,9 +66,9 @@ Target File: `*`
 2800000C 00000000
 ```
 
-### 6. Change Difficulty to STANDARD
+### 7. Change Difficulty to STANDARD
 
-Target File: `*`
+Target File: `data*.bin`
 
 ```
 8001000C 8C26C0AA
@@ -60,9 +76,9 @@ Target File: `*`
 2800000C 00000001
 ```
 
-### 7. Change Difficulty to HARDCORE
+### 8. Change Difficulty to HARDCORE
 
-Target File: `*`
+Target File: `data*.bin`
 
 ```
 8001000C 8C26C0AA
@@ -70,9 +86,9 @@ Target File: `*`
 2800000C 00000002
 ```
 
-### 8. Claire - AutoSave - ATM-4
+### 9. Claire - AutoSave - ATM-4
 
-Target File: `*`
+Target File: `data*.bin`
 
 ```
 80020024 2D727526
@@ -85,5 +101,33 @@ F5C58BAA 01000000
 08000040 0000001C
 08000050 00000004
 2800000C 00000014
+```
+
+### 10. Encrypt Save data (Required)
+
+Target File: `data*.bin`
+
+```
+set range:0x0010,0x001F
+endian_swap(4)
+encrypt blowfish_ecb("K<>$cl%isqA|~nV4W5~3z_Q)j]5DHdB9sb{cI9Hn&Gqc-zO8O6zf")
+decrypt blowfish_cbc("K<>$cl%isqA|~nV4W5~3z_Q)j]5DHdB9sb{cI9Hn&Gqc-zO8O6zf", 0x0000000000000000)
+endian_swap(4)
+set range:0x0010,EOF-0x04
+endian_swap(4)
+encrypt blowfish_cbc("K<>$cl%isqA|~nV4W5~3z_Q)j]5DHdB9sb{cI9Hn&Gqc-zO8O6zf", 0x0000000000000000)
+endian_swap(4)
+```
+
+### 11. Update Murmur3-32 Checksum (Required)
+
+Target File: `data*.bin`
+
+```
+set pointer:EOF-0x03
+set range:0x0000,pointer
+set [hash]:murmur3_32:0xFFFFFFFF
+set [hash]:endian_swap
+write next 0x00:[hash]
 ```
 
